tests/baselines/reference/declarationEmitThisPredicates02.errors.txt
tests/cases/conformance/declarationEmit/typePredicates/declarationEmitThisPredicates02.ts(8,10): error TS2526: A 'this' type is available only in a non-static member of a class or interface.


==== tests/cases/conformance/declarationEmit/typePredicates/declarationEmitThisPredicates02.ts (1 errors) ====
    export interface Foo {
        a: string;
        b: number;
        c: boolean;
    }
    
    export const obj = {
        m(): this is Foo {
             ~~~~
!!! error TS2526: A 'this' type is available only in a non-static member of a class or interface.
            let dis = this as {} as Foo;
            return dis.a != null && dis.b != null && dis.c != null;
        }
    }